--- a/conf/data.yml
+++ b/conf/data.yml
@@ -1,4 +1,5 @@
 Assessment(a1):
+  date: 2017/04/17 13:22:34
   weight: 123.3
   chest: 45.0
   thigh: 12.5
@@ -8,6 +9,7 @@ Assessment(a1):
   comment: Needs Improvement
 
 Assessment(a2):
+  date: 2017/05/17 14:15:22
   weight: 120.2
   chest: 45.0
   thigh: 12.0
@@ -17,6 +19,7 @@ Assessment(a2):
   comment: Very Good!
 
 Assessment(a3):
+  date: 2017/04/25 16:35:12
   weight: 98
   chest: 35
   thigh: 10.5
